2005-03-16  Kristian Høgsberg  <set EMAIL_ADDRESS environment variable>

	* src/Makefile.am: Add cairo_output_stream.c

	* src/cairo.h: Add new errors, CAIRO_STATUS_WRITE_ERROR and
	CAIRO_STATUS_SURFACE_FINISHED, add cairo_surface_finish()
	prototype, add cairo_write_func_t.

	* src/cairo.c: Add strings for new errors, documentation fix.
	
	* src/cairo_win32_surface.c:
	* src/cairo_xcb_surface.c:
	* src/cairo_xlib_surface.c:
	* src/cairo_glitz_surface.c:
	* src/cairo_image_surface.c:
	* src/cairo_png_surface.c:
	* src/cairo_ps_surface.c: Rename surface destroy functions to
	finish and change them to not free the surface.
	
	* src/cairo-pdf.h:
	* src/cairo_pdf_surface.c: Change PDF surface constructors to take
	a write function in the general case and add stdio convenience
	constructors.  Change destroy function to finish for
	cairo_pdf_surface.  Change implementation to use
	cairo_output_stream_t functions for output.
	
	* src/cairo_font.c: (_cairo_font_show_glyphs): Use
	_cairo_surface_show_glyphs instead of calling function pointer
	directly.
	
	* src/cairoint.h: Add prototypes for cairo output stream
	functions, rename destroy to finish in cairo_surface_backend_t and
	add finished flag to cairo_surface_t.
	
	* src/cairo_surface.c: Add cairo_surface_finish() and call it from
	cairo_surface_destroy().  Check the finished flag in
	cairo_surface_t in functions that change the surface.

2005-03-15  Owen Taylor  <otaylor@redhat.com>

	* src/cairo-xlib.h src/cairo_xlib_surface.c: Rework set
	of contructors for XLib surfaces. Add 
	cairo_xlib_surface_set_size().

	* src/cairo-xlib.h src/cairo_xlib_surface.c: Add
	cairo_xlib_surface_set_device_offset().

	* src/cairo_xlib_surface.c (cairo_xlib_surface_set_clip_region):
	Rewrite for clarity and efficiency.

	* src/cairo_xlib_surface.c (_get_image_surface): Use a 
	temporary pixmap to avoid possible BadMatch when fetch
	from windows.
	
	* src/cairo.[ch] src/cairo-xlib.h: Fix some parameter names
	for the docs.
